<package>
    <name>hlpr_navigation</name>
    <version>0.0.1</version>
    <description>Navigation metapackage for the HLPR Platform</description>
    <maintainer email="csaldanha3@gatech.edu">Carl Saldanha</maintainer>
    <author>Patrick Hussey</author>
    <url type="repository">https://github.com/hlpr_navigation</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <run_depend>hlpr_navigation_apps</run_depend>
    <run_depend>hlpr_costmap_plugins</run_depend>
  
    <export>
        <metapackage/>
    </export>
</package>
